Fix alignment on subtitles.

--- a/goodCSS.css
+++ b/goodCSS.css
@@ -21,8 +21,8 @@
 */
 
 body {
-    width: 100%;
-    height: 100%;
+    width: 100em;
+    height: 100em;
     color: black;
     background: #11151c;
     margin: 0;
@@ -59,7 +59,7 @@ a {
 
 .subTitle {
     font-size: 15pt;
-    text-align: center;
+    text-align: left;
     font-family: "Arial Black", Gadget, sans-serif;
     color:  #d66853;
 }
@@ -81,8 +81,8 @@ a {
 
 .footer {
     position: absolute;
-    left: 830pt;
-    top: 780pt;
+    width: 100%;
+    text-align:right;
     background-color: #364156;
     color: #d66853;
     font-size: 10pt;
@@ -94,20 +94,19 @@ a {
 }
 
 .boilerplate {
-    width: 80pt;
-    height: 80pt;
+    width: 200pt;
+    height: 200pt;
     background: #212d40;
     border: solid 5pt #364156;
     color: #d66853;
-    position: absolute;
-    left: 400pt;
-    top: 250pt;
+    margin-top: 10%;
+    margin-left: 50%;
 }
 
 .columnContainer {
     margin-top: 35pt;
     margin-left: 250pt;
-    width: 100%;
+    width: 100em;
     height: 750pt;
     background: #364156;
     background: -moz-linear-gradient(left, #364156, #364156 50%, #11151c);
